--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>User - Tebak Kartu Natal (Final)</title>
+<title>Tebak Kartu Natal — KASINOJP</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
@@ -13,51 +13,61 @@
     --gold:#ffef9f;
     --accent:#d4af37;
     --muted:#bfc6c9;
+    --btn-hover:#ffd966;
   }
-  *{box-sizing:border-box}
+  *{box-sizing:border-box; margin:0; padding:0;}
+  html,body{font-family:'Poppins',system-ui; background:linear-gradient(180deg,var(--bg1),var(--bg2)); color:#fff; min-height:100vh; padding:10px;}
   
-  html, body {
-    margin:0;
-    font-family:'Poppins',system-ui,Segoe UI,Roboto;
-    background:linear-gradient(180deg,var(--bg1),var(--bg2));
-    color:#fff;
-    min-height:100vh;
-    overflow-y:auto; 
-    padding:10px;
-  }
-
+  /* Header */
+  header{display:flex; flex-direction:column; align-items:center; gap:10px; text-align:center; margin-bottom:20px;}
+  .title h1{font-size:28px; background:linear-gradient(90deg,#ffef9f,#d4af37); -webkit-background-clip:text; color:transparent; text-shadow:0 4px 18px rgba(212,175,55,.3);}
+  .subtitle{font-size:14px; color:var(--muted);}
+  
+  /* Wrap */
+  .wrap{width:100%; max-width:520px; margin:0 auto; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.12)); border-radius:20px; padding:25px; border:1px solid rgba(212,175,55,0.08); box-shadow:0 15px 40px rgba(2,6,23,0.7); position:relative;}
+  
+  /* Input Row */
+  .code-row{display:flex; gap:12px; flex-wrap:wrap; justify-content:center; margin-bottom:20px;}
+  input[type="text"]{padding:12px 16px; border-radius:12px; border:none; background:#0b1216; color:#fff; min-width:200px; flex:1; font-weight:600; transition:0.3s;}
+  input[type="text"]:focus{outline:none; box-shadow:0 0 10px var(--gold);}
+  .btn{background:var(--gold); color:#111; padding:12px 18px; border-radius:12px; border:none; font-weight:700; cursor:pointer; transition:0.3s;}
+  .btn:hover{background:var(--btn-hover);}
+  .btn:disabled{opacity:.6; cursor:not-allowed;}
+  #status{margin-top:5px; font-size:13px; color:var(--muted);}
+  
+  /* Prize List */
+  .prize-list{display:flex; flex-wrap:wrap; gap:12px; justify-content:center; margin-bottom:25px;}
+  .prize{flex:1 1 28%; min-width:160px; padding:14px; border-radius:14px; background:linear-gradient(135deg,#ffb84d,#ffd966,#ffd966); color:#111; font-weight:800; text-align:center; font-size:16px; box-shadow:0 8px 35px rgba(0,0,0,.45); border:2px solid rgba(255,255,255,.12); position:relative; transition:0.3s;}
+  .prize:hover{transform:translateY(-3px) scale(1.03); box-shadow:0 12px 40px rgba(212,175,55,.7);}
+  .prize::before{content:"🎄"; position:absolute; left:10px; top:-10px; font-size:20px;}
+  .prize small{display:block; margin-top:6px; font-size:12px; color:#222;}
+  
+  /* Card Grid */
+  .grid{display:grid; grid-template-columns:repeat(3,1fr); gap:16px;}
+  .card{height:150px; border-radius:16px; perspective:1200px; position:relative; cursor:pointer; transition:0.4s;}
+  .card.locked{filter:grayscale(.25) blur(.2px); cursor:not-allowed; opacity:.9;}
+  .card-inner{position:relative; width:100%; height:100%; transition:transform .6s; transform-style:preserve-3d; border-radius:16px;}
+  .card.flip .card-inner{transform:rotateY(180deg);}
+  .card-front,.card-back{position:absolute; inset:0; border-radius:16px; display:flex; align-items:center; justify-content:center; font-weight:700; backface-visibility:hidden; padding:12px; text-align:center; transition:0.3s;}
+  .card-front{background:linear-gradient(180deg,#071018,#0b1013); border:1px solid rgba(255,255,255,0.06); color:var(--muted); font-size:18px; box-shadow:0 4px 15px rgba(0,0,0,.4);}
+  .card-back{background:linear-gradient(135deg,#fff7d0,#ffd87a); transform:rotateY(180deg); color:#111; font-size:18px; box-shadow:0 4px 15px rgba(0,0,0,.5);}
+  
+  /* Result Area */
+  .result{margin-top:20px; display:flex; flex-direction:column; gap:8px; align-items:center;}
+  .result .small{color:var(--muted); font-size:13px;}
+  
+  /* Decorations */
   .dec{position:fixed; left:0; top:0; right:0; bottom:0; pointer-events:none; z-index:0;}
   .dec .tree{position:absolute; width:36px; height:52px; background:linear-gradient(#0a7b1f,#00c04a); clip-path:polygon(50% 0,0 100%,100% 100%); opacity:.75; filter:drop-shadow(0 6px 14px rgba(0,0,0,.6)); animation:treeFall linear infinite;}
   @keyframes treeFall{0%{transform:translateY(-80px) scale(.6);opacity:.7}100%{transform:translateY(110vh) scale(1);opacity:0}}
-  .dec .snow{position:absolute;width:8px;height:8px;background:#fff;border-radius:50%;opacity:.85;animation:snowFall linear infinite}
+  .dec .snow{position:absolute;width:8px;height:8px;background:#fff;border-radius:50%;opacity:.85;animation:snowFall linear infinite;}
   @keyframes snowFall{0%{transform:translateY(-10px)}100%{transform:translateY(110vh)}}
-
-  .wrap{width:100%; max-width:480px; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.12)); border-radius:18px; padding:20px; border:1px solid rgba(212,175,55,0.08); box-shadow:0 10px 40px rgba(2,6,23,0.6); position:relative; z-index:1; margin-bottom:40px;}
-  header{display:flex;align-items:center;gap:16px;justify-content:space-between;flex-wrap:wrap}
-  .title{display:flex;gap:12px;align-items:center;}
-  .title h1{margin:0;font-size:26px;color:var(--gold);text-shadow:0 4px 18px rgba(212,175,55,.12)}
-  .subtitle{color:var(--muted);font-size:13px;margin:0}
-  .code-row{display:flex;gap:12px;align-items:center;margin-top:18px;flex-wrap:wrap}
-  input[type="text"]{padding:12px 14px;border-radius:10px;border:none;background:#0b1216;color:#fff;min-width:180px;flex:1;font-weight:600}
-  .btn{background:var(--gold);color:#111;padding:11px 16px;border-radius:10px;border:none;font-weight:700;cursor:pointer}
-  .btn:disabled{opacity:.6;cursor:not-allowed}
-  .prize-list{display:flex;gap:12px;margin-top:18px;flex-wrap:wrap;justify-content:center}
-  .prize{flex:1 1 28%; min-width:160px; padding:14px; border-radius:12px; background:linear-gradient(135deg,#ff4d4d,#ffb84d,#4caf50); color:#111;font-weight:800;text-align:center;font-size:16px;box-shadow:0 8px 30px rgba(0,0,0,.45); border:2px solid rgba(255,255,255,.12); position:relative;}
-  .prize::before{content:"🎄";position:absolute;left:10px;top:-10px;font-size:20px}
-  .prize small{display:block;color:#222;font-weight:700;margin-top:6px;font-size:12px}
-  .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-top:22px}
-  .card{height:150px;border-radius:14px;perspective:1200px;position:relative;cursor:pointer}
-  .card.locked{filter:grayscale(.25) blur(.2px);cursor:not-allowed;opacity:.9}
-  .card-inner{position:relative;width:100%;height:100%;transition:transform .6s;transform-style:preserve-3d;border-radius:14px}
-  .card.flip .card-inner{transform:rotateY(180deg)}
-  .card-front,.card-back{position:absolute;inset:0;border-radius:14px;display:flex;align-items:center;justify-content:center;font-weight:700; backface-visibility:hidden;padding:12px;text-align:center;}
-  .card-front{background:linear-gradient(180deg,#071018,#0b1013);border:1px solid rgba(255,255,255,0.04);color:var(--muted);font-size:18px}
-  .card-back{background:linear-gradient(135deg,#fff7d0,#ffd87a);transform:rotateY(180deg);color:#111;font-size:18px}
-  .card .label{font-weight:800}
-  .result{margin-top:18px;display:flex;flex-direction:column;gap:8px;align-items:center}
-  .result .small{color:var(--muted);font-size:13px}
-  .confetti{position:fixed;width:8px;height:8px;border-radius:2px;pointer-events:none;animation:confettiDrop 900ms linear forwards;z-index:20}
-  @keyframes confettiDrop{0%{transform:translateY(0) rotate(0);opacity:1}100%{transform:translateY(180px) rotate(360deg);opacity:0}}
+  
+  /* Confetti */
+  .confetti{position:fixed;width:8px;height:8px;border-radius:2px; pointer-events:none; animation:confettiDrop 900ms linear forwards; z-index:20;}
+  @keyframes confettiDrop{0%{transform:translateY(0) rotate(0); opacity:1}100%{transform:translateY(180px) rotate(360deg); opacity:0}}
+  
+  /* Responsive */
   @media (max-width:720px){.prize{flex:1 1 47%}.grid{grid-template-columns:repeat(2,1fr)}.card{height:130px}}
 </style>
 </head>
@@ -66,183 +76,33 @@
 <div class="dec" id="decContainer"></div>
 
 <main class="wrap" role="main" aria-live="polite">
-<header>
-  <div class="title">
-    <h1>Event Tebak Kartu — Natal KASINOJP</h1>
-    <p class="subtitle">Masukkan kode yang diberikan admin, pilih maksimal 3 kartu — kode hanya sekali pakai</p>
+  <header>
+    <div class="title">
+      <h1>Event Tebak Kartu — Natal KASINOJP</h1>
+      <p class="subtitle">Masukkan kode yang diberikan admin, pilih maksimal 3 kartu — kode hanya sekali pakai</p>
+    </div>
+  </header>
+
+  <div class="code-row">
+    <input id="codeInput" type="text" placeholder="Masukkan kode akses..."/>
+    <button id="verifyBtn" class="btn">Verify</button>
+    <div id="status">Status: belum terkoneksi</div>
   </div>
-</header>
 
-<div class="code-row">
-  <input id="codeInput" type="text" placeholder="Masukkan kode akses..."/>
-  <button id="verifyBtn" class="btn">Verify</button>
-  <div id="status" class="small" style="min-width:200px;text-align:center">Status: belum terkoneksi</div>
-</div>
+  <div class="prize-list">
+    <div class="prize">🎁⛄ PLATINUM<br/><small>10,000</small></div>
+    <div class="prize">🎁⛄ DIAMOND<br/><small>25,000</small></div>
+    <div class="prize">🎁⛄ SILVER DIAMOND<br/><small>50,000</small></div>
+    <div class="prize">🎁⛄ PERFECT DIAMOND<br/><small>100,000</small></div>
+    <div class="prize">🎁⛄ EPIC DIAMOND<br/><small>150,000</small></div>
+    <div class="prize">🎁⛄ MHYTIC DIAMOND<br/><small>400,000</small></div>
+  </div>
 
-<div class="prize-list">
-  <div class="prize">🎁⛄ PLATINUM<br/><small>10,000</small></div>
-  <div class="prize">🎁⛄ DIAMOND<br/><small>25,000</small></div>
-  <div class="prize">🎁⛄ SILVER DIAMOND<br/><small>50,000</small></div>
-  <div class="prize">🎁⛄ PERFECT DIAMOND<br/><small>100,000</small></div>
-  <div class="prize">🎁⛄ EPIC DIAMOND<br/><small>150,000</small></div>
-  <div class="prize">🎁⛄ MHYTIC DIAMOND<br/><small>400,000</small></div>
-</div>
-
-<section id="gridWrap" class="grid"></section>
-<div class="result" id="resultArea" aria-live="polite"></div>
+  <section id="gridWrap" class="grid"></section>
+  <div class="result" id="resultArea" aria-live="polite"></div>
 </main>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
-
-const firebaseConfig = {
-  apiKey: "AIzaSyDlpuf_uIlpmr2ybAqpJ2GTTRW-t86PGf0",
-  authDomain: "hadiahnatal-a033b.firebaseapp.com",
-  databaseURL: "https://hadiahnatal-a033b-default-rtdb.firebaseio.com",
-  projectId: "hadiahnatal-a033b",
-  storageBucket: "hadiahnatal-a033b.firebasestorage.app",
-  messagingSenderId: "577153304596",
-  appId: "1:577153304596:web:5f255e886a379ccb12bf01",
-  measurementId: "G-C5Q83YQ6SK"
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
-
-const configRef = ref(db, "gameConfig/cards");
-
-const decContainer = document.getElementById('decContainer');
-const gridWrap = document.getElementById('gridWrap');
-const verifyBtn = document.getElementById('verifyBtn');
-const codeInput = document.getElementById('codeInput');
-const statusEl = document.getElementById('status');
-const resultArea = document.getElementById('resultArea');
-
-let serverConfig = null;
-let unlocked = false;
-let revealed = new Set();
-const maxSelect = 3;
-let selectedCount = 0;
-
-function spawnTree(){const t=document.createElement('div');t.className='tree';t.style.left=(Math.random()*100)+'vw';t.style.animationDuration=(8+Math.random()*8)+'s';decContainer.appendChild(t);setTimeout(()=>t.remove(),18000);}
-function spawnSnow(){const s=document.createElement('div');s.className='snow';s.style.left=(Math.random()*100)+'vw';s.style.animationDuration=(4+Math.random()*6)+'s';decContainer.appendChild(s);setTimeout(()=>s.remove(),10000);}
-setInterval(spawnTree,900);setInterval(spawnSnow,140);
-
-function buildGrid(){
-  gridWrap.innerHTML='';
-  for(let i=0;i<9;i++){
-    const c=document.createElement('div');
-    c.className='card locked';
-    c.dataset.index=i;
-    c.innerHTML=`
-      <div class="card-inner">
-        <div class="card-front">Kartu ${i+1}</div>
-        <div class="card-back"><span class="label">?</span></div>
-      </div>`;
-    c.addEventListener('click',onCardClick);
-    gridWrap.appendChild(c);
-  }
-}
-
-function setStatus(txt, ok=true){
-  statusEl.textContent='Status: '+txt;
-  statusEl.style.color=ok?'var(--muted)':'#ff9a9a';
-}
-
-onValue(configRef,snap=>{
-  if(snap.exists()){serverConfig=snap.val();setStatus('Siap — data tersedia 🎁');if(!unlocked) buildGrid();}else{serverConfig=null;setStatus('Belum ada konfigurasi admin',false);buildGrid();}
-});
-
-async function verifyCode(code){
-  try{
-    const usedSnap = await get(ref(db,"gameConfig/usedCodes/"+code));
-    if(usedSnap.exists()){return {ok:false,msg:"Kode sudah dipakai. Silahkan hubungi admin"};}
-    if(!serverConfig) return {ok:false,msg:"Tidak ada konfigurasi admin"};
-    if(code !== (serverConfig.code||'')) return {ok:false,msg:"Kode salah"};
-    return {ok:true,msg:"Kode valid"};
-  }catch(err){console.error(err);return {ok:false,msg:"Error verifikasi"};}
-}
-
-async function onCardClick(e){
-  if(selectedCount>=maxSelect) return;
-  const el=e.currentTarget;
-  const idx=Number(el.dataset.index);
-  if(!unlocked || revealed.has(idx)) return;
-  const cardsArr=serverConfig?.cards||[];
-  let val=cardsArr[idx]||'Kosong';
-  
-  // jika berbeda dari kartu pertama → ZONK
-  if(selectedCount>0 && val!==cardsArr[0]) val='ZONK';
-  
-  el.classList.add('flip');
-  el.querySelector('.label').textContent=val;
-  revealed.add(idx);
-  selectedCount++;
-  
-  const msg=document.createElement('div'); msg.className='small';
-  msg.textContent=`Kamu membuka Kartu ${idx+1}: ${val}`;
-  resultArea.prepend(msg);
-
-  if(['Platinum','Diamond','Super Diamond'].includes(val)){
-    const r=el.getBoundingClientRect();
-    spawnConfetti(r.left+r.width/2,r.top+r.height/2);
-  }
-
-  if(selectedCount>=maxSelect){
-    await saveUsedCode();
-    document.querySelectorAll('.card').forEach(c=>c.classList.add('locked'));
-    const info=document.createElement('div');
-    info.className='small';
-    info.textContent='🎉 Hadiah sudah keluar! Silahkan hubungi admin untuk claim';
-    resultArea.prepend(info);
-  }
-}
-
-function spawnConfetti(x,y){
-  for(let i=0;i<22;i++){
-    const el=document.createElement('div');
-    el.className='confetti';
-    el.style.left=(x+(Math.random()*80-40))+'px';
-    el.style.top=(y+(Math.random()*40-20))+'px';
-    el.style.background=['#ffef9f','#ff4d4d','#4caf50','#ffffff'][Math.floor(Math.random()*4)];
-    document.body.appendChild(el);
-    setTimeout(()=>el.remove(),1000);
-  }
-}
-
-async function saveUsedCode(){
-  const code=(codeInput.value||'').trim();
-  if(!code){setStatus('Masukkan kode sebelum menyimpan',false);return;}
-  if(!serverConfig){setStatus('Tidak ada konfigurasi admin',false);return;}
-  try{
-    const snap=await get(ref(db,"gameConfig/usedCodes/"+code));
-    if(snap.exists()){setStatus('Kode sudah dipakai, hubungi admin',false);return;}
-    const cardsResult=Array.from(gridWrap.querySelectorAll('.card'))
-      .map(c=>c.classList.contains('flip')?c.querySelector('.label').textContent:null);
-    await set(ref(db,"gameConfig/usedCodes/"+code),{cards:cardsResult,time:Date.now(),used:true});
-    setStatus('Kode & kartu tersimpan ✓');
-    unlocked=false;
-    verifyBtn.disabled=true;
-    codeInput.disabled=true;
-  }catch(err){console.error(err);setStatus('Gagal menyimpan: '+(err.message||err),false);}
-}
-
-verifyBtn.addEventListener('click',async ()=>{
-  const code=(codeInput.value||'').trim();
-  if(!code){setStatus('Masukkan kode dulu',false);return;}
-  setStatus('Memeriksa kode...');
-  verifyBtn.disabled=true;
-  const res=await verifyCode(code);
-  verifyBtn.disabled=false;
-  if(!res.ok){setStatus(res.msg,false);unlocked=false;document.querySelectorAll('.card').forEach(c=>c.classList.add('locked'));return;}
-  unlocked=true;selectedCount=0;revealed.clear();
-  buildGrid();
-  setStatus('Kode benar — silakan pilih sampai 3 kartu 🎁');
-});
-
-buildGrid();
-</script>
+<!-- Script tetap sama seperti versi awal -->
 
 </body>
 </html>
