--- a/index.html
+++ b/index.html
@@ -1,184 +1,137 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Tebak Kartu Natal — KASINOJP</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Roda Hadiah — Natal KASINOJP</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-:root{
-  --bg1:#071229;
-  --bg2:#0c1624;
-  --gold:#ffef9f;
-  --accent:#d4af37;
-  --muted:#bfc6c9;
-  --btn-hover:#ffd966;
+body {
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(180deg, #071229, #0c1624);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
-*{box-sizing:border-box;margin:0;padding:0;}
-html,body{font-family:'Poppins',system-ui; background:linear-gradient(180deg,var(--bg1),var(--bg2)); color:#fff; min-height:100vh; padding:10px;}
-
-/* Header */
-header{display:flex; flex-direction:column; align-items:center; gap:10px; text-align:center; margin-bottom:20px; position:relative;}
-
-/* Lampu Natal bergaris horizontal di atas judul */
-.lights-row {
-  display:flex;
-  justify-content:space-between;
-  width:100%;
-  max-width:520px;
-  margin-bottom:8px;
-}
-.light {
-  width:12px;
-  height:12px;
-  border-radius:50%;
-  box-shadow:0 0 6px rgba(255,255,255,0.6);
-  animation:blink 1.5s infinite alternate;
-}
-.light:nth-child(4n+1){background:red; animation-delay:0s;}
-.light:nth-child(4n+2){background:green; animation-delay:.3s;}
-.light:nth-child(4n+3){background:yellow; animation-delay:.6s;}
-.light:nth-child(4n+4){background:blue; animation-delay:.9s;}
-
-@keyframes blink {
-  0% {opacity:0.3; transform:scale(0.8);}
-  50% {opacity:1; transform:scale(1);}
-  100% {opacity:0.3; transform:scale(0.8);}
-}
-
-/* Judul */
-.title h1{
-  font-size:28px;
-  background:linear-gradient(90deg,#ffef9f,#d4af37);
+h1 {
+  background: linear-gradient(90deg,#ffef9f,#d4af37);
   -webkit-background-clip:text;
-  color:transparent;
-  text-shadow:0 4px 18px rgba(212,175,55,.3);
-  position:relative;
-  animation:glow 1.5s infinite alternate;
+  color: transparent;
+  font-size: 28px;
+  margin-bottom: 20px;
+  text-align: center;
 }
-@keyframes glow{
-  0%{text-shadow:0 0 8px #ffd966,0 0 12px #ffef9f;}
-  100%{text-shadow:0 0 16px #ffd966,0 0 24px #ffef9f;}
+
+/* Input dan tombol */
+.input-row {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
 }
-.subtitle{font-size:14px; color:var(--muted);}
-
-/* Main Wrap */
-.wrap{width:100%; max-width:520px; margin:0 auto; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.12)); border-radius:20px; padding:25px; border:1px solid rgba(212,175,55,0.08); box-shadow:0 15px 40px rgba(2,6,23,0.7);}
-
-/* Input Row */
-.code-row{display:flex; gap:12px; flex-wrap:wrap; justify-content:center; margin-bottom:20px;}
-input[type="text"]{padding:12px 16px; border-radius:12px; border:none; background:#0b1216; color:#fff; min-width:200px; flex:1; font-weight:600; transition:0.3s;}
-input[type="text"]:focus{outline:none; box-shadow:0 0 10px var(--gold);}
-.btn{background:var(--gold); color:#111; padding:12px 18px; border-radius:12px; border:none; font-weight:700; cursor:pointer; transition:0.3s;}
-.btn:hover{background:var(--btn-hover);}
-.btn:disabled{opacity:.6; cursor:not-allowed;}
-#status{margin-top:5px; font-size:13px; color:var(--muted); text-align:center;}
-
-/* Prize List - warna-warni animasi */
-.prize-section{margin-bottom:40px;}
-.prize-list{display:flex; flex-wrap:wrap; gap:12px; justify-content:center;}
-.prize{
-  flex:1 1 28%;
-  min-width:160px;
-  padding:16px;
-  border-radius:16px;
-  background:linear-gradient(135deg,#d62828,#f94144,#ff6b6b,#ffd166);
-  color:#111;
-  font-weight:800;
-  text-align:center;
-  font-size:16px;
-  box-shadow:0 8px 35px rgba(0,0,0,.45);
-  border:2px solid rgba(255,255,255,.12);
-  position:relative;
-  transition:0.3s;
-  animation:colorChange 3s infinite alternate;
+input[type="text"] {
+  padding: 12px 16px;
+  border-radius: 12px;
+  border: none;
+  font-weight: 600;
+  flex: 1;
 }
-.prize:hover{transform:translateY(-3px) scale(1.05); box-shadow:0 12px 45px rgba(212,175,55,.8);}
-.prize::before{content:"🎄"; position:absolute; left:10px; top:-10px; font-size:22px; animation:twinkle 1.5s infinite alternate;}
-@keyframes twinkle{0%{transform:scale(1);opacity:0.6;}50%{transform:scale(1.2);opacity:1;}100%{transform:scale(1);opacity:0.6;}}
-@keyframes colorChange{
-  0%{background:linear-gradient(135deg,#d62828,#f94144);}
-  25%{background:linear-gradient(135deg,#ff6b6b,#ffd166);}
-  50%{background:linear-gradient(135deg,#06d6a0,#1b9aaa);}
-  75%{background:linear-gradient(135deg,#ff9f1c,#ff4040);}
-  100%{background:linear-gradient(135deg,#d62828,#f94144);}
+button {
+  padding: 12px 18px;
+  border-radius: 12px;
+  border: none;
+  background: #ffef9f;
+  color: #111;
+  font-weight: 700;
+  cursor: pointer;
+  transition: 0.3s;
 }
-.prize small{display:block; margin-top:6px; font-size:12px; color:#222;}
+button:hover {background:#ffd966;}
+button:disabled {opacity:0.6; cursor:not-allowed;}
 
-/* Card Grid */
-.grid-section{margin-top:30px;}
-.grid{display:grid; grid-template-columns:repeat(3,1fr); gap:16px;}
-.card{height:150px; border-radius:16px; perspective:1200px; position:relative; cursor:pointer; transition:0.4s;}
-.card.locked{filter:grayscale(.25) blur(.2px); cursor:not-allowed; opacity:.9;}
-.card-inner{position:relative; width:100%; height:100%; transition:transform .6s; transform-style:preserve-3d; border-radius:16px;}
-.card.flip .card-inner{transform:rotateY(180deg);}
-.card-front,.card-back{position:absolute; inset:0; border-radius:16px; display:flex; align-items:center; justify-content:center; font-weight:700; backface-visibility:hidden; padding:12px; text-align:center; transition:0.3s;}
-.card-front{background:linear-gradient(180deg,#071018,#0b1013); border:1px solid rgba(255,255,255,0.06); color:var(--muted); font-size:18px; box-shadow:0 4px 15px rgba(0,0,0,.4);}
-.card-back{background:linear-gradient(135deg,#fff7d0,#ffd87a); transform:rotateY(180deg); color:#111; font-size:18px; box-shadow:0 4px 15px rgba(0,0,0,.5);}
+/* Roda */
+.wheel-container {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  margin-bottom: 20px;
+}
+.wheel {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 8px solid #ffd966;
+  position: relative;
+  overflow: hidden;
+  transition: transform 5s cubic-bezier(0.25, 1, 0.5, 1);
+}
+.segment {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  top: 50%;
+  left: 50%;
+  transform-origin: 0% 0%;
+  border-top-right-radius: 300px;
+  color: #111;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  padding: 10px;
+  font-weight: 700;
+  text-shadow: 0 2px 4px rgba(0,0,0,0.4);
+}
 
-/* Result Area */
-.result{margin-top:20px; display:flex; flex-direction:column; gap:8px; align-items:center;}
-.result .small{color:var(--muted); font-size:13px;}
+/* Penanda atas */
+.pointer {
+  position: absolute;
+  top: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  border-bottom: 20px solid #ffef9f;
+}
 
-@media (max-width:720px){.prize{flex:1 1 47%}.grid{grid-template-columns:repeat(2,1fr)}.card{height:130px}}
+/* Hasil */
+#result {
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
 </style>
 </head>
 <body>
 
-<main class="wrap" role="main" aria-live="polite">
-  <header>
-    <div class="lights-row">
-      <!-- Buat 20 lampu di atas judul -->
-      <div class="light"></div><div class="light"></div><div class="light"></div><div class="light"></div>
-      <div class="light"></div><div class="light"></div><div class="light"></div><div class="light"></div>
-      <div class="light"></div><div class="light"></div><div class="light"></div><div class="light"></div>
-      <div class="light"></div><div class="light"></div><div class="light"></div><div class="light"></div>
-      <div class="light"></div><div class="light"></div><div class="light"></div><div class="light"></div>
-    </div>
+<h1>Roda Hadiah — Natal KASINOJP</h1>
 
-    <div class="title">
-      <h1>Event Tebak Kartu — Natal KASINOJP</h1>
-      <p class="subtitle">Masukkan kode yang diberikan admin, pilih maksimal 3 kartu — kode hanya sekali pakai</p>
-    </div>
-  </header>
+<div class="input-row">
+  <input type="text" id="voucherInput" placeholder="Masukkan kode voucher...">
+  <button id="spinBtn">Putar Roda</button>
+</div>
 
-  <div class="code-row">
-    <input id="codeInput" type="text" placeholder="Masukkan kode akses..."/>
-    <button id="verifyBtn" class="btn">Verify</button>
-    <div id="status">Status: belum terkoneksi</div>
-  </div>
+<div class="wheel-container">
+  <div class="pointer"></div>
+  <div class="wheel" id="wheel"></div>
+</div>
 
-  <!-- Prize Section -->
-  <div class="prize-section">
-    <div class="prize-list">
-      <div class="prize">🎁⛄ PLATINUM<br/><small>10,000</small></div>
-      <div class="prize">🎁⛄ DIAMOND<br/><small>25,000</small></div>
-      <div class="prize">🎁⛄ SILVER DIAMOND<br/><small>50,000</small></div>
-      <div class="prize">🎁⛄ PERFECT DIAMOND<br/><small>100,000</small></div>
-      <div class="prize">🎁⛄ EPIC DIAMOND<br/><small>150,000</small></div>
-      <div class="prize">🎁⛄ MHYTIC DIAMOND<br/><small>400,000</small></div>
-    </div>
-  </div>
-
-  <!-- Card Section -->
-  <div class="grid-section">
-    <section id="gridWrap" class="grid"></section>
-  </div>
-
-  <div class="result" id="resultArea" aria-live="polite"></div>
-</main>
+<div id="result">Hasil akan muncul di sini</div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
 import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
+// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyDlpuf_uIlpmr2ybAqpJ2GTTRW-t86PGf0",
   authDomain: "hadiahnatal-a033b.firebaseapp.com",
   databaseURL: "https://hadiahnatal-a033b-default-rtdb.firebaseio.com",
   projectId: "hadiahnatal-a033b",
-  storageBucket: "hadiahnatal-a033b.appspot.com",
+  storageBucket: "hadiahnatal-a033b.firebasestorage.app",
   messagingSenderId: "577153304596",
   appId: "1:577153304596:web:5f255e886a379ccb12bf01",
   measurementId: "G-C5Q83YQ6SK"
@@ -186,112 +139,77 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
-const configRef = ref(db, "gameConfig/cards");
 
-const gridWrap = document.getElementById('gridWrap');
-const verifyBtn = document.getElementById('verifyBtn');
-const codeInput = document.getElementById('codeInput');
-const statusEl = document.getElementById('status');
-const resultArea = document.getElementById('resultArea');
+const wheel = document.getElementById('wheel');
+const spinBtn = document.getElementById('spinBtn');
+const voucherInput = document.getElementById('voucherInput');
+const resultEl = document.getElementById('result');
 
-let serverConfig = null;
-let unlocked = false;
-let revealed = new Set();
-const maxSelect = 3;
-let selectedCount = 0;
+let segments = [];
+let spinning = false;
 
-function buildGrid(){
-  gridWrap.innerHTML='';
-  for(let i=0;i<9;i++){
-    const c=document.createElement('div');
-    c.className='card locked';
-    c.dataset.index=i;
-    c.innerHTML=`
-      <div class="card-inner">
-        <div class="card-front">Kartu ${i+1}</div>
-        <div class="card-back"><span class="label">?</span></div>
-      </div>`;
-    c.addEventListener('click',onCardClick);
-    gridWrap.appendChild(c);
+// Ambil hadiah dari Firebase
+const prizesRef = ref(db, 'gameConfig/prizes');
+onValue(prizesRef, snap => {
+  if(snap.exists()) {
+    segments = snap.val();
+    createWheel();
   }
-}
-
-function setStatus(txt, ok=true){
-  statusEl.textContent='Status: '+txt;
-  statusEl.style.color=ok?'var(--muted)':'#ff9a9a';
-}
-
-onValue(configRef,snap=>{
-  if(snap.exists()){serverConfig=snap.val();setStatus('Siap — data tersedia 🎁');if(!unlocked) buildGrid();}
-  else{serverConfig=null;setStatus('Belum ada konfigurasi admin',false);buildGrid();}
 });
 
-async function verifyCode(code){
-  try{
-    const usedSnap = await get(ref(db,"gameConfig/usedCodes/"+code));
-    if(usedSnap.exists()){return {ok:false,msg:"Kode sudah dipakai. Silahkan hubungi admin"};}
-    if(!serverConfig) return {ok:false,msg:"Tidak ada konfigurasi admin"};
-    if(code !== (serverConfig.code||'')) return {ok:false,msg:"Kode salah"};
-    return {ok:true,msg:"Kode valid"};
-  }catch(err){console.error(err);return {ok:false,msg:"Error verifikasi"};}
+// Buat segmen roda
+function createWheel() {
+  wheel.innerHTML='';
+  const colors = ['#ff6b6b','#ff9f1c','#06d6a0','#1b9aaa','#9d4edd','#ffd166','#f94144'];
+  const angle = 360 / segments.length;
+  segments.forEach((text,i)=>{
+    const seg = document.createElement('div');
+    seg.className='segment';
+    seg.textContent=text;
+    seg.style.transform=`rotate(${i*angle}deg) skewY(-${90-angle}deg)`;
+    seg.style.background=colors[i % colors.length];
+    wheel.appendChild(seg);
+  });
 }
 
-async function onCardClick(e){
-  if(selectedCount>=maxSelect) return;
-  const el=e.currentTarget;
-  const idx=Number(el.dataset.index);
-  if(!unlocked || revealed.has(idx)) return;
-  const cardsArr=serverConfig?.cards||[];
-  let val=cardsArr[idx]||'Kosong';
-  if(selectedCount>0 && val!==cardsArr[0]) val='ZONK';
-  el.classList.add('flip');
-  el.querySelector('.label').textContent=val;
-  revealed.add(idx);
-  selectedCount++;
-  const msg=document.createElement('div'); msg.className='small';
-  msg.textContent=`Kamu membuka Kartu ${idx+1}: ${val}`;
-  resultArea.prepend(msg);
-  if(selectedCount>=maxSelect){
-    await saveUsedCode();
-    document.querySelectorAll('.card').forEach(c=>c.classList.add('locked'));
-    const info=document.createElement('div');
-    info.className='small';
-    info.textContent='🎉 Hadiah sudah keluar! Silahkan hubungi admin untuk claim';
-    resultArea.prepend(info);
+// Fungsi spin
+spinBtn.addEventListener('click', async ()=>{
+  const code = voucherInput.value.trim();
+  if(!code){alert('Masukkan kode voucher!'); return;}
+  if(spinning) return;
+  spinning = true;
+
+  const voucherSnap = await get(ref(db, 'gameConfig/vouchers/'+code));
+  if(!voucherSnap.exists()){
+    alert('Voucher tidak valid!');
+    spinning = false;
+    return;
   }
-}
 
-async function saveUsedCode(){
-  const code=(codeInput.value||'').trim();
-  if(!code){setStatus('Masukkan kode sebelum menyimpan',false);return;}
-  if(!serverConfig){setStatus('Tidak ada konfigurasi admin',false);return;}
-  try{
-    const snap=await get(ref(db,"gameConfig/usedCodes/"+code));
-    if(snap.exists()){setStatus('Kode sudah dipakai, hubungi admin',false);return;}
-    const cardsResult=Array.from(gridWrap.querySelectorAll('.card'))
-      .map(c=>c.classList.contains('flip')?c.querySelector('.label').textContent:null);
-    await set(ref(db,"gameConfig/usedCodes/"+code),{cards:cardsResult,time:Date.now(),used:true});
-    setStatus('Kode & kartu tersimpan ✓');
-    unlocked=false;
-    verifyBtn.disabled=true;
-    codeInput.disabled=true;
-  }catch(err){console.error(err);setStatus('Gagal menyimpan: '+(err.message||err),false);}
-}
+  const usedSnap = await get(ref(db, 'gameConfig/usedVouchers/'+code));
+  if(usedSnap.exists()){
+    alert('Voucher sudah digunakan!');
+    spinning = false;
+    return;
+  }
 
-verifyBtn.addEventListener('click',async ()=>{
-  const code=(codeInput.value||'').trim();
-  if(!code){setStatus('Masukkan kode dulu',false);return;}
-  setStatus('Memeriksa kode...');
-  verifyBtn.disabled=true;
-  const res=await verifyCode(code);
-  verifyBtn.disabled=false;
-  if(!res.ok){setStatus(res.msg,false);unlocked=false;document.querySelectorAll('.card').forEach(c=>c.classList.add('locked'));return;}
-  unlocked=true;selectedCount=0;revealed.clear();
-  buildGrid();
-  setStatus('Kode benar — silakan pilih sampai 3 kartu 🎁');
+  const winnerIndex = Math.floor(Math.random() * segments.length);
+  const angle = 360 / segments.length;
+  const rotation = 360*5 + (winnerIndex*angle) + angle/2;
+
+  wheel.style.transition='transform 5s cubic-bezier(0.25,1,0.5,1)';
+  wheel.style.transform=`rotate(${rotation}deg)`;
+
+  setTimeout(async ()=>{
+    const prize = segments[winnerIndex];
+    resultEl.textContent=`Selamat! Kamu mendapatkan: ${prize}`;
+
+    // Tandai voucher sudah dipakai
+    await set(ref(db,'gameConfig/usedVouchers/'+code), {prize, time:Date.now()});
+    spinning = false;
+  },5200);
 });
-
-buildGrid();
 </script>
+
 </body>
 </html>
